# django_advanced_logging

./: .env.example  CLAUDE.md  DEPLOYMENT.md  DOCKER_GUIDE.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  LOCAL_INSTALLATION.md  MULTI_ENVIRONMENT_GUIDE.md  MULTI_ENVIRONMENT_SUMMARY.md  README.md  RESUMEN_COMPLETO.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
advanced_logging/: README.md  __init__.py  admin.py  apps.py  middleware.py  models.py  utils.py
advanced_logging/core/: __init__.py  filters.py  formatters.py  handlers.py  logger.py
advanced_logging/management/: __init__.py
advanced_logging/management/commands/: test_logging.py
advanced_logging/migrations/: 0001_initial.py  __init__.py
django_advanced_logging/: __init__.py  __version__.py  utils.py
django_advanced_logging/core/: filters.py  formatters.py  handlers.py  logger.py
django_advanced_logging/django/: apps.py  integrations_middleware.py  middleware.py
django_advanced_logging/django/migrations/: 0001_create_logs_table.py
examples/: .env.dev.example  .env.local.example  .env.production.example  .env.staging.example  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.production  Dockerfile.staging  basic_usage.py  django_settings.py  docker-compose.override.dev.yml  docker-compose.override.local.yml  docker-compose.override.production.yml  docker-compose.override.staging.yml  docker-compose.yml  pyproject.toml.example  requirements.txt
examples/settings/: __init__.py  base.py  development.py  local.py  production.py  staging.py
tests/: README_TESTS.md  conftest.py  settings.py  test_django_integration.py  test_filters.py  test_formatters.py  test_handlers.py  test_logger.py  test_utils.py
