[tool.poetry]
name = "django-advanced-logging"
version = "1.0.0"
description = "Sistema de logging profesional y escalable para proyectos Django con soporte para PostgreSQL, logging asíncrono, formateo avanzado y filtros de datos sensibles"
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuusuario/django-advanced-logging"
repository = "https://github.com/tuusuario/django-advanced-logging"
documentation = "https://github.com/tuusuario/django-advanced-logging#readme"
keywords = ["django", "logging", "postgresql", "async", "middleware", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
packages = [
    { include = "django_advanced_logging" }
]
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CLAUDE.md",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = ">=3.2,<5.0"
# Soporte para ambos psycopg2 y psycopg3
psycopg2-binary = {version = ">=2.9.0", optional = true}
psycopg = {version = ">=3.0.0", optional = true}
# Fallback para psycopg2 (sin -binary)
psycopg2 = {version = ">=2.9.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
django-stubs = "^4.2.0"
pre-commit = "^3.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.2.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.poetry.extras]
# Usar psycopg2-binary (recomendado para la mayoría de casos)
postgresql = ["psycopg2-binary"]
# Usar psycopg3 (para proyectos que ya lo usan)
postgresql3 = ["psycopg"]
# Usar psycopg2 sin binary (para casos específicos)
postgresql2 = ["psycopg2"]
# Instalar todo
all = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = ["."]
addopts = "-ra -q --cov=django_advanced_logging --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["django_advanced_logging"]
omit = ["*/migrations/*", "*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false